--- a/vue/vueRepeat.html
+++ b/vue/vueRepeat.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
       <meta charset="utf-8">
       <title>
-        vue 学习
+        vue 学习 官方Demo
       </title>
       <style>
         #demo li { cursor: pointer;color: #34495e;-ms-user-select: none;-moz-user-select: none;-webkit-user-select: none; }
