VUE添加 表单处理

--- a/event.html
+++ b/event.html
@@ -70,6 +70,10 @@
           }
           // demo2();
           
+          // 事件浏览器兼容 研究, utils.js代码 深究
+          function demo3() {
+
+          }
 
         </script>
 
