代码 整理、优化；VUE添加自定义指令详解

--- a/canvas.html
+++ b/canvas.html
@@ -5,51 +5,19 @@
         <title>
             canvas简单用法
         </title>
+        <link rel="stylesheet" type="text/css" href="common.css" />
         <style>
-          .radius-btn{
-            border-radius: 5px;
-            cursor:pointer;
-            padding:5px;
-            margin: 5px;
-            background-color: #eee;
-          }
-          .radius-btn:hover{
-            background-color:#ddd;
-          }
-          .clear-btn{
-            background-color:#93B5EC;
-          }
-          .clear-btn:hover{
-            background-color:#8080FF;
-          }
-          .canvas{
-            /*margin 设置了也没用*/
-            height:500px;
-            width: 800px;
-          }
-          #noSupport{
-            display: none;
-          }
-          #clearRectBtn{
-            position: absolute;
-            top: 350px;
-            left: 300px;
-          }
-          .fb{
-            font-weight: bold;
-          }
+          
+          .clear-btn{ background-color:#93B5EC; }
+          .clear-btn:hover{ background-color:#8080FF; }
+          .canvas{ height:500px; width: 800px; }
+          #noSupport{ display: none; }
+          #clearRectBtn{ position: absolute; top: 350px; left: 300px; }
+          .fb{ font-weight: bold; }
           /*绘制图像按钮，灰阶过滤*/
-          .gray-btn{
-            position: absolute;
-            top:450px;
-            left:300px;
-          }
+          .gray-btn{ position: absolute; top:450px; left:300px; }
           /*合成样式*/
-          .comp-list{
-            position: absolute;
-            top: 360px;
-            left: 20px;
-          }
+          .comp-list{ position: absolute; top: 360px; left: 20px; }
 
         </style>
 
