--- a/challenge_case/IE8_position.html
+++ b/challenge_case/IE8_position.html
@@ -12,7 +12,7 @@
         /*弹出框内容*/
         .nav_wrap .u_info_pop{ display: none; position:absolute; left:110%; top:60px; width:310px; color:#000; text-align:left; padding:0px 10px; border: 1px solid #ccc;}
         /*兼容IE8*/
-        .nav_wrap .u_info_pop{ position:static\9; margin-left:-110%\9; margin-top:-170px\9; background-color:#fff\9;}
+        /*.nav_wrap .u_info_pop{ position:static\9; margin-left:-110%\9; margin-top:-170px\9; background-color:#fff\9;}*/
         .nav_wrap .u_info_pop .u_pop_nickname{ width: 180px; margin:5px 5px 5px 0px;}
         .nav_wrap .u_info_pop .u_face { padding: 10px 0; width: 60px; margin: 0 auto; cursor:pointer; }
         .nav_wrap .u_info_pop .u_face img{ width: 60px; height: 60px; display: block; border-radius: 50%;}
