更新vue组件系统Demo

--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -160,8 +160,8 @@
         <div class="u_face">
             <img id="uFace" src="images/dlam.jpg">
             <div class="u-face-pop" id="uFacePop">
-              <p>hi, 你这懦夫！</p>
-              <p>这点勇气都没有！</p>
+              <p>hi, 逗比你好</p>
+              <p>人生如戏全靠演技</p>
               <div class="triangle-ico"></div>
             </div>
         </div>
