增加vue vs jquery

--- a/ajax.html
+++ b/ajax.html
@@ -5,24 +5,10 @@
       <title>
           ajax用法
       </title>
+      <link rel="stylesheet" type="text/css" href="./common.css" />
       <style>
-        .radius-btn{
-          border-radius: 5px;
-          cursor:pointer;
-          padding:5px;
-          margin: 5px;
-          background-color: #eee;
-        }
-        .radius-btn:hover{
-          background-color:#ddd;
-        }
-        .res-cont{
-          border:2px solid #becceb; 
-          padding: 10px;
-        }
-        #tForm{
-          margin: 20px 10px;
-        }
+        .res-cont{ border:2px solid #becceb; padding: 10px; }
+        #tForm{ margin: 20px 10px; }
       </style>
     </head>
     
